...

  return (
    <View style={styles.container}>
      <StatusBar barStyle="light-content" />
      <CameraView ref={cameraRef} style={styles.camera} facing="back" />
      <View style={styles.overlay}>
        <TouchableOpacity testID="closeCameraButton" style={styles.cancelButton} onPress={onCancel}>
          <Icon name="close" size={30} color="white" />
        </TouchableOpacity>

        <TouchableOpacity testID="captureButton" style={styles.captureButton} onPress={tirarFoto} disabled={isTaking}>
          <View style={styles.captureInner} />
        </TouchableOpacity>
...
