...
          <Text style={styles.controlButtonText}>Limpar</Text>
        </TouchableOpacity>
      </View>

      <View style={styles.buttonsContainer}>
        <TouchableOpacity
          testID="confirmAreaButton"
          style={styles.confirmButton}
          onPress={() =>
            selectedLocations.length >= 3
              ? onConfirm(selectedLocations)
              : Alert.alert('Aviso', 'Marque pelo menos 3 pontos para formar uma área')
          }
        >
          <Text style={styles.buttonText}>Confirmar Área</Text>
        </TouchableOpacity>

        <TouchableOpacity testID="closeMapButton" style={styles.cancelButton} onPress={onCancel}>
          <Text style={styles.buttonText}>Voltar</Text>
        </TouchableOpacity>
      </View>
    </View>
  );
};
...
