...
            onPress={() => {
              swipeableRef.current?.close();
              onEdit();
            }}
          >
            <Icon name="edit" size={24} color="white" />
            <Text style={styles.swipeActionText}>Editar</Text>
          </TouchableOpacity>
        </Animated.View>
        <Animated.View style={{ transform: [{ scale: scaleDelete }] }}>
          <TouchableOpacity
            style={[styles.swipeActionButton, { backgroundColor: '#ef4444' }]}
            onPress={() => {
...
